# signalforce-fireworks

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  loom-script-neil.md  pyproject.toml  walk-in-script-kana-v1.md  walk-in-script-kana.md  walk-in-script-v10.md  walk-in-script-v8.md
config.example/: config.yaml
configs/icps/: fireworks_ai.yaml
demo/: fireworks_icp_demo.html  hubspot-ceiling.html  hubspot-ceiling.json  kana-customer-zero.html  kana-customer-zero.json  veriforce.json
examples/fireworks-demo/: accounts.json
examples/kana-ai-first/: config.yaml  customer-zero-brief.yaml  gtm-context.md  sample_signals.json
examples/marketo-migration/: config.yaml  funding_seeds.yaml  g2_seeds.yaml
examples/marops/: axonius.yaml  dbt-labs.yaml  hubspot-ceiling.yaml  vanta.yaml
renderer/kana/: customer_zero_brief.html.j2  customer_zero_queue.html.j2
renderer/marops/: lifecycle_brief.html.j2
scripts/: config.py  config_loader.py  demo_fireworks_icp.py  demo_scan.py  icp_fit_scorer.py  intent_scorer.py  kana_demo.py  models.py  signal_aggregator.py
scripts/marops/: briefer.py  cli.py  fireworks_icp_schema.py  models.py  renderer.py
scripts/scanners/: arxiv_scanner.py  funding_scanner.py  funding_seed_scanner.py  g2_authenticated_scanner.py  g2_scanner.py  (+5 more)
site/: index.html  script.js  styles.css
superme-30-day-plan/: package-lock.json
tests/: test_config_serpapi.py  test_demo_scan.py  test_fireworks_icp_config.py  test_g2_authenticated_scanner.py  test_g2_scanner.py  test_icp_fit_scorer.py  test_job_scanner_config.py  test_kana_demo.py  test_signal_aggregator.py
(+26 files in other folders)
