[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signalforce"
version = "0.1.0"
description = "Signal-based outbound sales engine — configure for any ICP"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4>=4.12",
    "pydantic",
    "python-dotenv",
    "sqlalchemy>=1.4",
    "anthropic>=0.50.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing"
