[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalforce"
version = "0.1.0"
description = "Signal-based outbound sales engine — configure for any ICP"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4>=4.12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "PyYAML>=6",
    "python-dotenv",
    "sqlalchemy>=1.4",
    "anthropic>=0.50.0",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
include = ["scripts", "scripts.*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing"
